--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
         <link rel="stylesheet" href="index.css" />
     </header>
     <body>
-    <h1>2ND CHANCE ALEIT NONPROFIT THEORY OF CHANGE (TOC)</h1>
+      <img class="header-image" src="https://image.flaticon.com/icons/png/128/3047/3047937.png" />
+      <h3>2nd Chance Aleit Nonprofit Presents:</h3>
+      <h1 class="title">THE ALEIT SCHOLARSHIP</h1>
+      <hr class="title-breakline" />
+    <!-- THIS IS GOING INTO A THEORY OF CHANGE TAB -->
+    <h2>THEORY OF CHANGE (TOC)</h2>
+    <hr class="sub-title-breakline" />
     <table style="width:100%">
         <tr>
           <th>Input</th>
@@ -14,56 +20,56 @@
           <th>Short Term Impact</th>
           <th>Longterm Impact 2</th>
         </tr>
-        <tr>
+        <tr class="tr-grey">
           <td>SCHOLARSHIP RELIEF FOR FELONS</td>
           <td>IMMEDIATE SCHOLARSHIPS FOR FELONS</td>
           <td>EDUCATION FUNDING WILL INCREASE CHANCES OF GRADUATING AND PURSUING CAREER</td>
           <td>LOWER RECIDIVISM</td>
           <td>WILL REDUCE THE CHANCES OF THE NEXT GENERATION COMMITTING CRIMES IN THE COMMUNITY</td>
         </tr>
-        <tr>
+        <tr class="tr-white">
           <td>ACCESS FOR INMATES TO APPLY FOR SCHOLARSHIPS WHILE INCARCERATED</td>
           <td>MORE INMATES WILL PURSUE HIGHER EDUCATION IMMEDIATELY UPON RELEASE</td>
           <td>EDUCATION FUNDING WILL INCREASE CHANCES OF GRADUATING AND PURSUING CAREER</td>
           <td>LOWER RECIDIVISM & CRIMES COMMITTED IN OUR COMMUNITIES</td>
           <td>INMATES WILL BELIEVE SUCCESS IS AVAILABLE FOR THEM EVEN WITH THEIR CRIMINAL RECORDS WITH PROOF OF PREVIOUS INMATES</td>
         </tr>
-        <tr>
+        <tr class="tr-grey">
           <td>EMPLOYMENT OPPORTUNITIES & ENTREPRENEUR MENTORSHIP FOR FELONS</td>
           <td>WILL HAVE MORE EMPLOYED EX-CONVICTS</td>
           <td>WILL HAVE MORE EX-CONVICT BUSINESS OWNERS</td>
           <td>LOWER RECIDIVISM</td>
           <td>WILL REDUCE THE CRIMES & VIOLENCE COMMITTED AND WILL  MAKE OUR COMMUNITIES SAFER</td>
         </tr>
-        <tr>
+        <tr class="tr-white">
           <td>SCHOLARSHIP RELIEF FOR SINGLE PARENTS</td>
           <td>IMMEDIATE SCHOLARSHIPS FOR SINGLE PARENTS</td>
           <td>EDUCATION FUNDING WILL INCREASE CHANCES OF GRADUATING AND PURSUING CAREER</td>
           <td>REDUCE ECONOMIC HARDSHIPS FOR SINGLE PARENTS</td>
           <td>WILL REDUCE THE AMOUNT CHILDREN WHO GO TO FOSTER HOMES AND SHELTERS</td>
         </tr>
-        <tr>
+        <tr class="tr-grey">
           <td>EMPLOYMENT OPPORTUNITIES & ENTREPRENEUR </td>
           <td>WILL HAVE MORE EMPLOYED</td>
           <td>WILL HAVE MORE SINGLE PARENT </td>
           <td>REDUCE ECONOMIC HARDSHIPS</td>
           <td>WILL REDUCE THE NEED FORGOVERNMENT</td>
         </tr>
-        <tr>
+        <tr class="tr-white">
           <td>MENTORSHIP FOR SINGLE PARENTS</td>
           <td>SINGLE PARENTS</td>
           <td>BUSINESS OWNERS</td>
           <td>FOR SINGLE PARENTS</td>
           <td>ASSISTANCE FOR SINGLE PARENTS </td>
         </tr>
-        <tr>
+        <tr class="tr-grey">
           <td>SCHOLARSHIP RELIEF FOR SINGLE MINORITIES</td>
           <td>IMMEDIATE SCHOLARSHIPS FOR MINORITIES</td>
           <td>EDUCATION FUNDING WILL INCREASES CHANCES OF GRADUATING AND PURSUING CAREER</td>
           <td>REDUCE SYSTEMS OF OPPRESSION FOR MINORITIES </td>
           <td>MORE HIGH LEVEL SKILLS AVAILABLE IN COMMUNITY NETWORKS SERVICING NEEDS</td>
         </tr>
-        <tr>
+        <tr class="tr-white">
           <td>EMPLOYMENT OPPORTUNITIES & ENTREPRENEUR MENTORSHIP FOR MINORITIES</td>
           <td>WILL HAVE MORE EMPLOYED MINORITIES</td>
           <td>WILL HAVE MORE MINORITIES AS BUSINESS OWNERS</td>
@@ -73,45 +79,42 @@
       </table>
 
 <!-- USE PLAIN TEXT TAGS IN HTML AND EDIT SIZES IN CSS LATER -->
-      <h2>(PART A)</h1>
-      <h3>"2nd Chance Aleit Nonprofit</h2>
-      <h3>Presents:</h3>
-      <h2>THE ALEIT SCHOLARSHIP</h2>
 
-      <h2>(Part B)</h2>
-      <h2>MISSION STATEMENT</h2>
-      <p calss="part-b-text">“The 2nd Chance Aleit Nonprofit aims to combat systemic barriers for ex-offenders, single parents and minorities by providing them access to higher education“</p>
-      
-      <h2>(PART C)</h2>
-      <p class="part-c-text">“The 2nd Chance Aleit Nonprofit was created out of the mission to provide economic opportunities for disenfranchised groups. This nonprofit is created to tackle three objectives. 1. Provide ex-offenders the opportunity to pursue educational training that could provide them the opportunity to start over. 2. To grant single parents the economic support to pursue educational paths without putting stress on the family. 3. Assist Low-income BIPOC opportunities to overcome economic difficulties to pursue a college education. “ ----->>> (CAN DELETE THIS PARAGRAPH AND JUST KEEP SPECIFIC TARGETS BELOW, IF TOO MUCH!!!)</p>
-      <b>“The specific targets and purpose of this organization shall be:</b>
-      <b>A) Ex-Offender:</b><p> Over the years we have seen the unfair justice system that creates a system of recidivism of ex-offenders. The lack of support in the judicial system has created a cycle of recidivism within our culture. To help stop this travesty, The 2nd Chance Aleit Nonprofit plans to provide funding for those in need of higher education.</p>
-      <b>B) Single Parents:</b><p> Our communities come from single family households. This has created economic hardships for our families to pursue higher education. This is why The 2nd Chance Aleit Nonprofit, is funding single parents that want to advance their lives through higher education.</p>
-      <b>C) Low-income BIPOC</b><p>The current system we live in, has created many barriers for low-income BIPOC to get ahead. At The 2nd Chance Aleit Nonprofit, we plan to create a path in which communities of color can flourish and thrive. We want to create a culture of acceptance and growth. “</p>
-      
-      <p>Link 1 (BOX)</p>
-      <p>“APPLY FOR 2022 SCHOOL YEAR SCHOLARSHIP
-        ACCEPTING APPLICATIONS BETWEEN SEPT. 1ST 2021-JAN 15, 2022”
-        (LATER APPLICATION WILL BE HERE PLUS RULES)
-      </p>  
-      <p>
-        LINK 2(OR TAB)
-        DONOR BOX FOR PEOPLE
-        (GO FUND ME LINK MAYBE?)         
+
+    <h2 class="mission-statement-title">MISSION STATEMENT</h2>
+    <hr class="title-breakline" />
+    <p class="mission-statement">The 2nd Chance Aleit Nonprofit aims to combat systemic barriers for ex-offenders, single parents and minorities by providing them access to higher education</p>
+
+    <p class="mission-statement">The 2nd Chance Aleit Nonprofit was created out of the mission to provide economic opportunities for disenfranchised groups. This nonprofit is created to tackle three objectives. 1. Provide ex-offenders the opportunity to pursue educational training that could provide them the opportunity to start over. 2. To grant single parents the economic support to pursue educational paths without putting stress on the family. 3. Assist Low-income BIPOC opportunities to overcome economic difficulties to pursue a college education.</p>
+    <div class="specific-targets-text">
+    <b class="mission-statement-qualifications">The specific targets and purpose of this organization shall be:</b>
+      <p><b>A) Ex-Offender:</b> Over the years we have seen the unfair justice system that creates a system of recidivism of ex-offenders. The lack of support in the judicial system has created a cycle of recidivism within our culture. To help stop this travesty, The 2nd Chance Aleit Nonprofit plans to provide funding for those in need of higher education.</p>
+      <p><b>B) Single Parents:</b> Our communities come from single family households. This has created economic hardships for our families to pursue higher education. This is why The 2nd Chance Aleit Nonprofit, is funding single parents that want to advance their lives through higher education.</p>
+      <p><b>C) Low-income BIPOC</b>The current system we live in, has created many barriers for low-income BIPOC to get ahead. At The 2nd Chance Aleit Nonprofit, we plan to create a path in which communities of color can flourish and thrive. We want to create a culture of acceptance and growth.</p>
+    </div>
+<!-- THIS WILL BE AN APPLICATION LINK -->
+      <b>APPLICATIONS</b>
+      <p>APPLY FOR 2022 SCHOOL YEAR SCHOLARSHIP
+        ACCEPTING APPLICATIONS BETWEEN SEPT. 1ST 2021-JAN 15, 2022
+        <!-- (LATER APPLICATION WILL BE HERE PLUS RULES) -->
       </p>
       <p>
-        LINK 3 (OR TAB)
-        “ABOUT US PAGE.
+        <!-- LINK 2(OR TAB) -->
+        DONOR BOX FOR PEOPLE
+        <a href="https://email.gofundme.com/ls/click?upn=McCelgEyxf19hZNOeSlreO6HA-2BSfGiGcMLzCiS-2ByOImTj3G4OhSVvPAPmOQMkh0mvofz8DL9beEkuYT5zafLAaamaI-2Bk-2F2kZLLLKQJ5em-2F-2F42dw9IThsS9R9ObfXpmslE6jy-2BDwTjwEMygy0uGb2vaojZOUuuYHd0UUbt3OsF2Q6feDEXHDLKBw4iQMUtCIpN-2BBxFVtbdANEjqw6Fn9-2BI0-2BkgldMINKHPmcftpgift-2F05L0VepGWHprOuY27rdJgu8rzt-2F5-2Fas34b0XuKn7eM4xaOrEL-2FZ1P0xE4K7Zaj18-3DMId5_TNLAHU3EMu4QVhhblvmQm622ojrbl2-2Bo8RXeCFEfhFFbHLltKCy9iyAaGtsUG4cBc0wwLsYhfdvSFvzwy3LPmeAU3uWKhhTg8zK2WJ2l8b2hkRzvAE-2FxIHe7Eb1rbT6Hce41v5o-2BiSufSv7bYX5zkPJhrHuWQ1eLK27SgmoStLYxxW2i0iD6W1HCfoedUdO-2F71VR9NYHK-2F1-2B8feofRkHxRePNsXNObQrTPed7RCUy33F9OjM6xxuYh2jXIoixtWAy-2BZiQIr4-2BZxbWvCRqzISjg-3D-3D">Go Fund Me</a>
+      </p>
+      <!-- LINK 3 (OR TAB) -->
+      <!-- “ABOUT US PAGE. -->
+      <b>CONTACT</b>
+      <p>
         “FOR MORE INFORMATION REGARDING SCHOLARSHIP INFO EMAIL US 
         @ 2NDCHANCEALEIT@GMAIL.COM “
       </p>
-      <p>BOARD MEMBERS:
+      <b>BOARD MEMBERS:</b>
+      <p>
         HABEN SEBHATU
         SOLOMON DUBIE
         GAVIN AMOS”
-      </p>
-      <p>
-        (THEORY CHANGE WILL LATER BE MOVED TO THIS TAB, BUT FOR NOW THAT BOX CAN BE ALL ON ONE PAGE)
       </p>
     </body>
 </html>
