--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css" />
     </header>
     <body>
-      <img class="header-image" src="https://image.flaticon.com/icons/png/128/3047/3047937.png" />
+      <img class="header-image" src="https://cdn.pixabay.com/photo/2020/02/26/07/49/graduate-silhouettes-4880943_1280.png" />
       <h3>2nd Chance Aleit Nonprofit Presents:</h3>
       <h1 class="title">THE ALEIT SCHOLARSHIP</h1>
       <hr class="title-breakline" />
@@ -92,29 +92,49 @@
       <p><b>B) Single Parents:</b> Our communities come from single family households. This has created economic hardships for our families to pursue higher education. This is why The 2nd Chance Aleit Nonprofit, is funding single parents that want to advance their lives through higher education.</p>
       <p><b>C) Low-income BIPOC</b>The current system we live in, has created many barriers for low-income BIPOC to get ahead. At The 2nd Chance Aleit Nonprofit, we plan to create a path in which communities of color can flourish and thrive. We want to create a culture of acceptance and growth.</p>
     </div>
+        <hr class="mission-statement-breakline" />
+
 <!-- THIS WILL BE AN APPLICATION LINK -->
       <b>APPLICATIONS</b>
-      <p>APPLY FOR 2022 SCHOOL YEAR SCHOLARSHIP
-        ACCEPTING APPLICATIONS BETWEEN SEPT. 1ST 2021-JAN 15, 2022
+      <p><u>APPLY FOR 2022 SCHOOL YEAR SCHOLARSHIP
+      ACCEPTING APPLICATIONS BETWEEN <b>SEPT. 1ST 2021-JAN 15, 2022</b></u>
         <!-- (LATER APPLICATION WILL BE HERE PLUS RULES) -->
       </p>
       <p>
-        <!-- LINK 2(OR TAB) -->
-        DONOR BOX FOR PEOPLE
-        <a href="https://email.gofundme.com/ls/click?upn=McCelgEyxf19hZNOeSlreO6HA-2BSfGiGcMLzCiS-2ByOImTj3G4OhSVvPAPmOQMkh0mvofz8DL9beEkuYT5zafLAaamaI-2Bk-2F2kZLLLKQJ5em-2F-2F42dw9IThsS9R9ObfXpmslE6jy-2BDwTjwEMygy0uGb2vaojZOUuuYHd0UUbt3OsF2Q6feDEXHDLKBw4iQMUtCIpN-2BBxFVtbdANEjqw6Fn9-2BI0-2BkgldMINKHPmcftpgift-2F05L0VepGWHprOuY27rdJgu8rzt-2F5-2Fas34b0XuKn7eM4xaOrEL-2FZ1P0xE4K7Zaj18-3DMId5_TNLAHU3EMu4QVhhblvmQm622ojrbl2-2Bo8RXeCFEfhFFbHLltKCy9iyAaGtsUG4cBc0wwLsYhfdvSFvzwy3LPmeAU3uWKhhTg8zK2WJ2l8b2hkRzvAE-2FxIHe7Eb1rbT6Hce41v5o-2BiSufSv7bYX5zkPJhrHuWQ1eLK27SgmoStLYxxW2i0iD6W1HCfoedUdO-2F71VR9NYHK-2F1-2B8feofRkHxRePNsXNObQrTPed7RCUy33F9OjM6xxuYh2jXIoixtWAy-2BZiQIr4-2BZxbWvCRqzISjg-3D-3D">Go Fund Me</a>
+        <b>
+          <!-- LINK 2(OR TAB) -->
+          DONATIONS:
+        </b>
+      </p>
+      <p>
+        <a class="go-fund-me" href="https://email.gofundme.com/ls/click?upn=McCelgEyxf19hZNOeSlreO6HA-2BSfGiGcMLzCiS-2ByOImTj3G4OhSVvPAPmOQMkh0mvofz8DL9beEkuYT5zafLAaamaI-2Bk-2F2kZLLLKQJ5em-2F-2F42dw9IThsS9R9ObfXpmslE6jy-2BDwTjwEMygy0uGb2vaojZOUuuYHd0UUbt3OsF2Q6feDEXHDLKBw4iQMUtCIpN-2BBxFVtbdANEjqw6Fn9-2BI0-2BkgldMINKHPmcftpgift-2F05L0VepGWHprOuY27rdJgu8rzt-2F5-2Fas34b0XuKn7eM4xaOrEL-2FZ1P0xE4K7Zaj18-3DMId5_TNLAHU3EMu4QVhhblvmQm622ojrbl2-2Bo8RXeCFEfhFFbHLltKCy9iyAaGtsUG4cBc0wwLsYhfdvSFvzwy3LPmeAU3uWKhhTg8zK2WJ2l8b2hkRzvAE-2FxIHe7Eb1rbT6Hce41v5o-2BiSufSv7bYX5zkPJhrHuWQ1eLK27SgmoStLYxxW2i0iD6W1HCfoedUdO-2F71VR9NYHK-2F1-2B8feofRkHxRePNsXNObQrTPed7RCUy33F9OjM6xxuYh2jXIoixtWAy-2BZiQIr4-2BZxbWvCRqzISjg-3D-3D" target="_blank">Go Fund Me</a>
       </p>
       <!-- LINK 3 (OR TAB) -->
       <!-- “ABOUT US PAGE. -->
       <b>CONTACT</b>
       <p>
-        “FOR MORE INFORMATION REGARDING SCHOLARSHIP INFO EMAIL US 
-        @ 2NDCHANCEALEIT@GMAIL.COM “
+        FOR MORE INFORMATION REGARDING SCHOLARSHIP INFO EMAIL US AT
+        <a href="mailto:2ndchancealeit@gmail.com">2NDCHANCEALEIT@GMAIL.COM</a> 
+      </p>
+      <p class="closing-quote"><i>"Our justice system must promote accountability for those convicted of breaking the law.
+          However, once someone has been
+          held accountable in a proportional manner, they should have their liberty restored and be provided an opportunity to
+          rejoin their community with dignity. The reality of our current system is that many individuals exiting the justice
+          system often remain on the fringes of our society because they cannot access the basic essentials necessary to
+          become a
+          productive member of their community. We can help people overcome these barriers through innovative research
+          identifying
+          promising solutions, creating supportive communities, and reforming policies that present barriers to second
+          chances."</i>
+        <p><b>- Jeremiah Mosteller, Police Liaison, Justice Reform</b></p>
       </p>
       <b>BOARD MEMBERS:</b>
       <p>
-        HABEN SEBHATU
-        SOLOMON DUBIE
-        GAVIN AMOS”
+        HABEN SEBHATU,
+        SOLOMON DUBIE,
+        GAVIN AMOS
       </p>
+
+     
     </body>
 </html>
