changing background color

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       <h3>2nd Chance Aleit Nonprofit Presents:</h3>
       <h1 class="title">THE ALEIT SCHOLARSHIP</h1>
       <hr class="title-breakline" />
+      <a href='toc.html'>Theory of change</a>
     <!-- THIS IS GOING INTO A THEORY OF CHANGE TAB -->
-    <h2>THEORY OF CHANGE (TOC)</h2>
+    <!-- <h2>THEORY OF CHANGE (TOC)</h2>
     <hr class="sub-title-breakline" />
     <table style="width:100%">
         <tr>
@@ -76,7 +77,7 @@
           <td>REDUCE ECONOMIC HARDSHIPS FOR SINGLE MINORITIES</td>
           <td>WILL INCREASE THE AVAILABILITY OF GOODS AND SERVICES IN THE COMMUNITY</td>
         </tr>
-      </table>
+      </table> -->
 
 <!-- USE PLAIN TEXT TAGS IN HTML AND EDIT SIZES IN CSS LATER -->
 
