changed background, toc t onew tab, and small effects to button hover

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       <h3>2nd Chance Aleit Nonprofit Presents:</h3>
       <h1 class="title">THE ALEIT SCHOLARSHIP</h1>
       <hr class="title-breakline" />
-      <a href='toc.html'>Theory of change</a>
     <!-- THIS IS GOING INTO A THEORY OF CHANGE TAB -->
     <!-- <h2>THEORY OF CHANGE (TOC)</h2>
     <hr class="sub-title-breakline" />
@@ -83,7 +82,7 @@
 
 
     <h2 class="mission-statement-title">MISSION STATEMENT</h2>
-    <hr class="title-breakline" />
+    <hr class="mission-statement-breakline" />
     <p class="mission-statement">The 2nd Chance Aleit Nonprofit aims to combat systemic barriers for ex-offenders, single parents and minorities by providing them access to higher education</p>
 
     <p class="mission-statement">The 2nd Chance Aleit Nonprofit was created out of the mission to provide economic opportunities for disenfranchised groups. This nonprofit is created to tackle three objectives. 1. Provide ex-offenders the opportunity to pursue educational training that could provide them the opportunity to start over. 2. To grant single parents the economic support to pursue educational paths without putting stress on the family. 3. Assist Low-income BIPOC opportunities to overcome economic difficulties to pursue a college education.</p>
@@ -93,7 +92,9 @@
       <p><b>B) Single Parents:</b> Our communities come from single family households. This has created economic hardships for our families to pursue higher education. This is why The 2nd Chance Aleit Nonprofit, is funding single parents that want to advance their lives through higher education.</p>
       <p><b>C) Low-income BIPOC</b>The current system we live in, has created many barriers for low-income BIPOC to get ahead. At The 2nd Chance Aleit Nonprofit, we plan to create a path in which communities of color can flourish and thrive. We want to create a culture of acceptance and growth.</p>
     </div>
-        <hr class="mission-statement-breakline" />
+          <a class="toc-button" href='toc.html'>Theory of change</a>
+
+        <hr class="application-statement-breakline" />
 
 <!-- THIS WILL BE AN APPLICATION LINK -->
       <b>APPLICATIONS</b>
