--- a/toc.html
+++ b/toc.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
-          <link rel="stylesheet" href="index.css" />
+  <head>
+    <title>Theory Of Change</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a class="toc-button" href="./index.html"> < Back Home</a></li>
+        </ul>
+      </nav>
+    </header>
     <h2>THEORY OF CHANGE (TOC)</h2>
   <hr class="sub-title-breakline" />
   <table style="width:100%">
