changed TOC text

--- a/toc.html
+++ b/toc.html
@@ -24,61 +24,53 @@
       <th>Longterm Impact 2</th>
     </tr>
     <tr class="tr-grey">
-      <td>SCHOLARSHIP RELIEF FOR FELONS</td>
-      <td>IMMEDIATE SCHOLARSHIPS FOR FELONS</td>
-      <td>EDUCATION FUNDING WILL INCREASE CHANCES OF GRADUATING AND PURSUING CAREER</td>
-      <td>LOWER RECIDIVISM</td>
-      <td>WILL REDUCE THE CHANCES OF THE NEXT GENERATION COMMITTING CRIMES IN THE COMMUNITY</td>
+      <td>Scholarship For Prior Convicted Felons.</td>
+      <td>Provide Access To Scholarships For Felons.</td>
+      <td>Scholarships Will Increase Chances Of Achieving Higher Education And Career Objectives.</td>
+      <td>Lowers Recidivism Rates.</td>
+      <td>Will Provide Access To Those Who Have A Record And Provide A Pathway To Advance Their Lives.</td>
     </tr>
     <tr class="tr-white">
-      <td>ACCESS FOR INMATES TO APPLY FOR SCHOLARSHIPS WHILE INCARCERATED</td>
-      <td>MORE INMATES WILL PURSUE HIGHER EDUCATION IMMEDIATELY UPON RELEASE</td>
-      <td>EDUCATION FUNDING WILL INCREASE CHANCES OF GRADUATING AND PURSUING CAREER</td>
-      <td>LOWER RECIDIVISM & CRIMES COMMITTED IN OUR COMMUNITIES</td>
-      <td>INMATES WILL BELIEVE SUCCESS IS AVAILABLE FOR THEM EVEN WITH THEIR CRIMINAL RECORDS WITH PROOF OF PREVIOUS
-        INMATES</td>
+      <td>Access For Inmates To Apply For Scholarships While Incarcerated.</td>
+      <td>More Inmates Will Pursue Higher Education Immediately Upon Release.</td>
+      <td>Education Funding Will Increase Chances Of Graduating And Pursuing Career.</td>
+      <td>Lower Recidivism & Crimes Committed In Our Communities.</td>
+      <td>Inmates Will Believe Success Is Available For Them Even With Their Criminal Records.</td>
     </tr>
     <tr class="tr-grey">
-      <td>EMPLOYMENT OPPORTUNITIES & ENTREPRENEUR MENTORSHIP FOR FELONS</td>
-      <td>WILL HAVE MORE EMPLOYED EX-CONVICTS</td>
-      <td>WILL HAVE MORE EX-CONVICT BUSINESS OWNERS</td>
-      <td>LOWER RECIDIVISM</td>
-      <td>WILL REDUCE THE CRIMES & VIOLENCE COMMITTED AND WILL MAKE OUR COMMUNITIES SAFER</td>
+      <td>Employment Opportunities & Entrepreneur Mentorship For Felons.</td>
+      <td>Will Provide And Guide Those Who Have Past Convictions.</td>
+      <td>Will Connect Ex-felons With Career Opportunities And Support.</td>
+      <td>Lower Recidivism.</td>
+      <td>Will Reduce The Crimes & Violence Committed And Will Make Our Communities Safer.</td>
     </tr>
     <tr class="tr-white">
-      <td>SCHOLARSHIP RELIEF FOR SINGLE PARENTS</td>
-      <td>IMMEDIATE SCHOLARSHIPS FOR SINGLE PARENTS</td>
-      <td>EDUCATION FUNDING WILL INCREASE CHANCES OF GRADUATING AND PURSUING CAREER</td>
-      <td>REDUCE ECONOMIC HARDSHIPS FOR SINGLE PARENTS</td>
-      <td>WILL REDUCE THE AMOUNT CHILDREN WHO GO TO FOSTER HOMES AND SHELTERS</td>
+      <td>Scholarship Relief For Single Parents.</td>
+      <td>Provide Access To Scholarships For Single Parents.</td>
+      <td>Education Funding Will Increase Chances Of Graduating And Pursuing Desired Careers.</td>
+      <td>Reduce Economic Hardships For Single Parents.</td>
+      <td>Will Reduce The Amount Children Who Go To Foster Homes And Shelters.</td>
     </tr>
     <tr class="tr-grey">
-      <td>EMPLOYMENT OPPORTUNITIES & ENTREPRENEUR </td>
-      <td>WILL HAVE MORE EMPLOYED</td>
-      <td>WILL HAVE MORE SINGLE PARENT </td>
-      <td>REDUCE ECONOMIC HARDSHIPS</td>
-      <td>WILL REDUCE THE NEED FORGOVERNMENT</td>
+      <td>Employment Opportunities & Entrepreneur Mentorship For Single Parents.</td>
+      <td>Provides Access And Guidance For Single Parents To Pursue Higher Education And Career Development.</td>
+      <td>Will Have More Single Parent Business Owners And Working Professionals. </td>
+      <td>Reduce Economic Hardships For Single Parents.</td>
+      <td>Provides Support And Will Reduce The Need For Government Assistance For Single Parents.</td>
     </tr>
     <tr class="tr-white">
-      <td>MENTORSHIP FOR SINGLE PARENTS</td>
-      <td>SINGLE PARENTS</td>
-      <td>BUSINESS OWNERS</td>
-      <td>FOR SINGLE PARENTS</td>
-      <td>ASSISTANCE FOR SINGLE PARENTS </td>
+      <td>Scholarship Relief For Bipoc.</td>
+      <td>Provides Access To Scholarships For Bipoc.</td>
+      <td>Education Funding Will Increase Chances Of Graduating And Pursuing Career.</td>
+      <td>Reduce Systems Of Oppression For Bipoc.</td>
+      <td>More Access To High Level Skills And Education In Our Community. </td>
     </tr>
     <tr class="tr-grey">
-      <td>SCHOLARSHIP RELIEF FOR SINGLE MINORITIES</td>
-      <td>IMMEDIATE SCHOLARSHIPS FOR MINORITIES</td>
-      <td>EDUCATION FUNDING WILL INCREASES CHANCES OF GRADUATING AND PURSUING CAREER</td>
-      <td>REDUCE SYSTEMS OF OPPRESSION FOR MINORITIES </td>
-      <td>MORE HIGH LEVEL SKILLS AVAILABLE IN COMMUNITY NETWORKS SERVICING NEEDS</td>
-    </tr>
-    <tr class="tr-white">
-      <td>EMPLOYMENT OPPORTUNITIES & ENTREPRENEUR MENTORSHIP FOR MINORITIES</td>
-      <td>WILL HAVE MORE EMPLOYED MINORITIES</td>
-      <td>WILL HAVE MORE MINORITIES AS BUSINESS OWNERS</td>
-      <td>REDUCE ECONOMIC HARDSHIPS FOR SINGLE MINORITIES</td>
-      <td>WILL INCREASE THE AVAILABILITY OF GOODS AND SERVICES IN THE COMMUNITY</td>
+      <td>Employment Opportunities & Entrepreneur Mentorship For Bipoc.</td>
+      <td>Will Provide Support And Mentorship. More Bipoc Pursuing Business Development.</td>
+      <td>Will Have More Bipoc Employed And As Business Owners.</td>
+      <td>Reduce Economic Hardships For Bipoc.</td>
+      <td>Will Increase Access To Bipoc Looking For Employment.</td>
     </tr>
   </table>
 </body>
